# zuu

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Config.md  Dockerfile  README.md  README_FR.md  about.hbs  again  compose.yaml  deny.toml  docker-compose.yml  index.html  package.json  scripts-gen  tux.toml  zuu.1  zuu.css  zuu.pkr.hcl  zuu.sh  zuu.toml
.github/workflows/: contiuous.yml  zuu.yml
assets/css/: zuu.css
commit/: .gitignore
dockers/: Makefile
dockers/assembly/: Dockerfile
dockers/bash/: Dockerfile
dockers/basic/: Dockerfile
dockers/c/: Dockerfile
dockers/clojure/: Dockerfile
dockers/cobol/: Dockerfile
dockers/cpp/: Dockerfile
dockers/crystal/: Dockerfile
dockers/csharp/: Dockerfile
dockers/d/: Dockerfile
dockers/dart/: Dockerfile
dockers/dotnet/: Dockerfile
dockers/elixir/: Dockerfile
dockers/erlang/: Dockerfile
dockers/fortran/: Dockerfile
dockers/fsharp/: Dockerfile
dockers/go/: Dockerfile
dockers/groovy/: Dockerfile
dockers/haskell/: Dockerfile
dockers/java/: Dockerfile
dockers/julia/: Dockerfile
dockers/kotlin/: Dockerfile
dockers/lua/: Dockerfile
dockers/matlab/: Dockerfile
dockers/nim/: Dockerfile
dockers/nodejs/: Dockerfile
dockers/objective-c/: Dockerfile
dockers/ocaml/: Dockerfile
dockers/octave/: Dockerfile
dockers/pascal/: Dockerfile
dockers/perl/: Dockerfile
dockers/php/: Dockerfile
dockers/python/: Dockerfile
dockers/r/: Dockerfile
dockers/racket/: Dockerfile
dockers/ruby/: Dockerfile
dockers/rust/: Dockerfile
dockers/scala/: Dockerfile
dockers/swift/: Dockerfile
dockers/tcl/: Dockerfile
dockers/typescript/: Dockerfile
dockers/vala/: Dockerfile
dockers/vhdl/: Dockerfile
dockers/vlang/: Dockerfile
dockers/zig/: Dockerfile
patches/: 0001-Launch-next-generation.patch
scripts/: cargo.bash  zuu-go  zuu-rust
src/: ask.rs  delete.rs  helpers.rs  install.rs  lib.rs  main.rs  output.rs  runner.rs  support.rs  utils.rs
src/bash/: mod.rs
src/c/: mod.rs
src/clojure/: mod.rs
src/cobol/: mod.rs
src/crystal/: mod.rs
src/d/: mod.rs
src/dart/: mod.rs
src/elixir/: mod.rs
src/erlang/: mod.rs
src/f_sharp/: mod.rs
src/fortran/: mod.rs
src/go/: mod.rs
src/groovy/: mod.rs
src/haskell/: mod.rs
src/java/: mod.rs
src/julia/: mod.rs
src/kotlin/: mod.rs
src/lua/: mod.rs
src/matlab/: mod.rs
src/nim/: mod.rs
src/nodejs/: mod.rs
src/objective_c/: mod.rs
src/ocaml/: mod.rs
src/perl/: mod.rs
src/php/: mod.rs
src/r/: mod.rs
src/ruby/: mod.rs
src/rust/: mod.rs
src/scala/: mod.rs
src/swift/: mod.rs
src/tcl/: mod.rs
src/typescript/: mod.rs
src/vhdl/: mod.rs
src/vlang/: mod.rs
zazen/readme/: description.md  examples.md  header.md  name.md  see.md  synopsis.md
zuu/: Dockerfile
