[package]
name = "zuu"
version = "24.0.0"
edition = "2021"
license = "AGPL-3.0"
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
authors = ["Willy Micieli"]
repository = "https://github.com/hackia/zuu"
description = "A program to check your code quality before all commit"
keywords = ["lint", "quality", "prevention", "Maintainability", "optimization"]

[[bin]]
name = "tux"

[dependencies]
clap = "4.5.20"
cli-table = "0.4.9"
crossterm = "0.28.1"
indicatif = "0.17.8"
inquire = { version = "0.7.5", features = ["console", "editor"] }
notifme = "0.0.2"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
